# nf-risk-stratification

./: .Rbuildignore  .gitignore  CONTRIBUTING.md  DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE  NEWS.md  PYPI_README.md  README.md  bootstrap_analysis.R  cran-comments.md  descriptive_stats.R  npc_analysis.R  pyproject.toml  ranking_analysis.R  utils.R
.github/workflows/: newr.yml  python-package.yml  r-package.yml  release.yml
R/: nf-risk-stratification.R
data/: README.md
man/: bootstrap_ci.Rd  descriptive_stats.Rd  npc_analysis.Rd  rank_patients.Rd  read_nf_data.Rd  run_nf_pipeline.Rd  validate_nf_data.Rd
python/nf_risk_stratification/: __init__.py  core.py
python/nf_risk_stratification/data/: nf_clinical_data_example.csv
results/pdf/: README.md
tests/: testthat.R
tests/testthat/: test-pipeline.R
tests_python/: test_core.py
